--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -8,8 +8,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 .wrapper {
-    /* display: flex;
-    flex-wrap: wrap; */
     min-height: 100vh;
 }
 h1 {
@@ -37,9 +35,9 @@ header {
 }
 .menu  {
     display: flex;
+    list-style-type: none;
 }
 .menu li {
-    list-style-type: none;
     display: flex;
     width: 100px;
     margin-right: 20px;
@@ -83,17 +81,14 @@ header {
 .about-text-social p{
     margin-bottom: 40px;
 }
-
 .social {
     display: flex;
 }
-
 .social-link {
     width: 40px;
     height: 40px;
     margin: 0 10px;
 }
-
 .social-link.linkendin {
     background-image: url(/img/linkedin-with-circle.svg);
 }
@@ -124,10 +119,10 @@ header {
     grid-gap: 20px;
     padding: 0 20px;
 }
-
-
-
-
+.portafolio-container img {
+    width: 90%;
+    height: 90%;
+}
 /* SKILL */
 .skill {
     width: 90%;
@@ -234,18 +229,16 @@ footer {
 }
 
 /* RESPONSIVE */
-@media screen and (max-width:800px) {
+@media screen and (max-width:768px) {
     h1 {
         font-size: 24px;
         padding-left: 10px;
     }
     .menu li {
-        list-style-type: none;
         display: flex;
-        width: 50px;
-        margin-right: 5px;
-        line-height: 10px;
-        justify-content: center;
+        margin-right: 10px;
+        align-items: center;
+        
     }
     .portafolio-container {
         display: grid;
@@ -254,8 +247,70 @@ footer {
         grid-row-gap: 20px;
         grid-column-gap: 10px;
     }
+}
+@media screen and (max-width:480px) {
+    header{
+        justify-content: center;
+    }
+    .menu {
+        display: none;
+    }
+    /* ABOUT */
+    .about-container {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .about-text-social p{
+        text-align: justify;
+        padding-top: 10px;
+    }
+    .social {
+        justify-content: space-evenly;
+    }
+    /* PORTAFOLIO */
+    .portafolio-container {
+        grid-template-columns: 1fr ;
+    }
+    .portafolio-container img {
+        width: 100%;
+    }
+    /* SKILL */
+    .skill-container {
+        flex-direction: column;
+        align-content: center;
+        
+    }
+    .bar-title {
+        width: 90%;
+    }
+    .bar-title:nth-child(odd){
+        padding: 0;
+    }
+    .bar-title:nth-child(even){
+        padding: 0;
+    }
 
+    /* CONTACT */
+    .contact-value{
+        flex-direction: column;
+        width: 86%;
+    }
+    .contact-value input {
+        width: auto;
+    }
+    .contact-bottom {
+        width: 100%;
+    }
+    .contact-bottom input {
+        width: 35%;
+    }
 
-
-
+    /* FOOTER */
+    footer {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    footer p {
+        padding-bottom: 5px;
+    }
 }
