--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -7,6 +7,15 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
+body::-webkit-scrollbar {
+    width: 15px;
+    height: 20px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: rgb(131, 121, 121);
+    border-radius: 5px;
+}
 .wrapper {
     min-height: 100vh;
 }
@@ -32,6 +41,7 @@ header {
     align-items: center;
     margin: auto;
     background: rgb(255, 136, 0);
+    scroll-behavior: smooth;
 }
 .menu  {
     display: flex;
@@ -66,6 +76,7 @@ header {
     display: flex;
     padding: 20px;
     align-items: center;
+    text-align: justify;
 }
 .about-container img{
     border-radius: 400px;
@@ -239,6 +250,18 @@ footer {
         margin-right: 10px;
         align-items: center;
         
+    }
+    .about-container {
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .about-text-social p{
+        text-align: justify;
+        padding-top: 10px;
+    }
+    .social {
+        justify-content: space-evenly;
     }
     .portafolio-container {
         display: grid;
